🐛 fix(SimpleCarousel.tsx): change browserWidth threshold from 768 to 920 🔧 chore(homepage.scss): comment out margin-top property in .intro-content 🔧 chore(callOutBand.scss): add z-index property to & > div 🔧 chore(contentCards.scss): add position and z-index properties to .wc-content-card 🔧 chore(haveQuestions.scss): remove ::before pseudo-element and associated styles 🔧 chore(haveQuestions.scss): add margin-bottom and width properties to .have-questions 🔧 chore(wpcore/_colors.scss): add position and z-index properties to [class*='_column']

--- a/src/styles/wpcore/_colors.scss
+++ b/src/styles/wpcore/_colors.scss
@@ -41,6 +41,9 @@ $darkColors: (
       @include mixins.extendedBackground('after', $theColor);
 
       & > [class*='_column'] {
+        position: relative;
+        z-index: tokens.$layer-2;
+
         &::after {
           display: none;
         }
